--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/vue-fontawesome": "^3.0.8",
+    "@vueuse/core": "^11.0.3",
     "axios": "^1.7.4",
     "json-server": "^1.0.0-beta.2",
     "pinia": "^2.1.7",
