--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "json-server": "^1.0.0-beta.2",
     "pinia": "^2.1.7",
     "vue": "^3.4.29",
-    "vue-router": "^4.3.3"
+    "vue-router": "^4.3.3",
+    "vue3-google-login": "^2.0.33"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
