--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "axios": "^1.7.4",
     "json-server": "^1.0.0-beta.2",
     "pinia": "^2.1.7",
+    "socket.io-client": "^4.8.0",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3",
-    "vue3-google-login": "^2.0.33"
+    "vue3-google-login": "^2.0.33",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
