--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@vueuse/core": "^11.0.3",
     "axios": "^1.7.4",
     "json-server": "^1.0.0-beta.2",
+    "jwt-decode": "^4.0.0",
     "pinia": "^2.1.7",
     "socket.io-client": "^4.8.0",
     "vue": "^3.4.29",
