--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/vue-fontawesome": "^3.0.8",
+    "@primevue/themes": "^4.0.7",
     "@vueuse/core": "^11.0.3",
     "axios": "^1.7.4",
     "json-server": "^1.0.0-beta.2",
     "jwt-decode": "^4.0.0",
     "pinia": "^2.1.7",
+    "primevue": "^4.0.7",
     "socket.io-client": "^4.8.0",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3",
