--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "primevue": "^4.0.7",
     "socket.io-client": "^4.8.0",
     "vue": "^3.4.29",
+    "vue-emoji-picker": "^1.0.3",
     "vue-router": "^4.3.3",
+    "vue3-emoji-picker": "^1.1.8",
     "vue3-google-login": "^2.0.33",
     "ws": "^8.18.0"
   },
