--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "pinia": "^2.1.7",
     "primevue": "^4.0.7",
     "socket.io-client": "^4.8.0",
+    "stringee-chat-js-sdk": "^0.2.0",
     "vue": "^3.4.29",
     "vue-emoji-picker": "^1.0.3",
     "vue-router": "^4.3.3",
