--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.7.4",
     "jwt-decode": "^4.0.0",
     "pinia": "^2.1.7",
+    "primeicons": "^7.0.0",
     "primevue": "^4.0.7",
     "socket.io-client": "^4.8.0",
     "stringee-chat-js-sdk": "^0.2.0",
