--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "@primevue/themes": "^4.0.7",
+    "@stream-io/video-client": "^1.11.11",
     "@vueuse/core": "^11.0.3",
     "axios": "^1.7.4",
     "jwt-decode": "^4.0.0",
+    "lodash-es": "^4.17.21",
     "pinia": "^2.1.7",
     "primeicons": "^7.0.0",
     "primevue": "^4.0.7",
