--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "primeicons": "^7.0.0",
     "primevue": "^4.0.7",
     "socket.io-client": "^4.8.0",
+    "uuid": "^11.0.3",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3",
     "ws": "^8.18.0"
