--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "type": "module",
+  "proxy": "https://whatsapp-server-lemon.vercel.app/",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
