--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VITE_JWT_ENDPOINT=http://localhost:8080/api/account/login
+VITE_JWT_ENDPOINT=whatsapp-server-lemon.vercel.app/api/account/login
 API_KEY_SID=SK.0.ZIfi8S9xNvWrVTbGVdWNWBMCkFFevbX
 API_KEY_SECRET=b3A0YlZjdkhDUDFXOVEwTjlLZmVjWVV3V2FRZFZUWnc=
