--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "type": "module",
-  "proxy": "https://whatsapp-server-lemon.vercel.app/",
+  "proxy": "https://whatsapp-server-lemon.vercel.app/socket.io",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
