--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,7 @@
       { "src": "package.json", "use": "@vercel/node" }
    ],
    "routes": [
+      { "src": "/api/(.*)", "dest": "/api/$1" },
       { "src": "/(.*)", "dest": "/dist/index.html" }
    ]
 }
