--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,6 @@
       { "src": "package.json", "use": "@vercel/node" }
    ],
    "routes": [
-      { "src": "/api/(.*)", "dest": "/api/$1" },
-      { "src": "/(.*)", "dest": "/dist/index.html" }
+      { "src": "/(.*)", "dest": "./dist/index.html" }
    ]
 }
